--- a/app/src/main/res/layout/doctor_date_fragment.xml
+++ b/app/src/main/res/layout/doctor_date_fragment.xml
@@ -299,112 +299,22 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <LinearLayout
+                    <androidx.recyclerview.widget.RecyclerView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="16dp"
+                        android:layout_marginEnd="8dp"
                         android:layout_marginBottom="16dp"
                         android:orientation="vertical"
+                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView22">
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="2dp"
-                            android:orientation="horizontal">
 
-                            <TextView
-                                android:id="@+id/textView23"
-                                android:layout_width="wrap_content"
-                                android:layout_height="50dp"
-                                android:layout_marginStart="16dp"
-                                android:layout_weight="1"
-                                android:background="@drawable/border"
-                                android:gravity="center"
-                                android:text="10:00 AM" />
-
-                            <TextView
-                                android:id="@+id/textView24"
-                                android:layout_width="wrap_content"
-                                android:layout_height="50dp"
-                                android:layout_marginStart="2dp"
-                                android:layout_weight="1"
-                                android:background="@drawable/border"
-                                android:gravity="center"
-                                android:text="10:30AM" />
-
-                            <TextView
-                                android:id="@+id/textView25"
-                                android:layout_width="wrap_content"
-                                android:layout_height="50dp"
-                                android:layout_marginStart="2dp"
-                                android:layout_weight="1"
-                                android:background="@drawable/border"
-                                android:gravity="center"
-                                android:text="11:00AM" />
-
-                            <TextView
-                                android:id="@+id/textView26"
-                                android:layout_width="wrap_content"
-                                android:layout_height="50dp"
-                                android:layout_marginStart="2dp"
-                                android:layout_marginEnd="16dp"
-                                android:layout_weight="1"
-                                android:background="@drawable/border"
-                                android:gravity="center"
-                                android:text="11:30AM" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:id="@+id/textView27"
-                                android:layout_width="wrap_content"
-                                android:layout_height="50dp"
-                                android:layout_marginStart="16dp"
-                                android:layout_weight="1"
-                                android:background="@drawable/border"
-                                android:gravity="center"
-                                android:text="10:00 AM" />
-
-                            <TextView
-                                android:id="@+id/textView28"
-                                android:layout_width="wrap_content"
-                                android:layout_height="50dp"
-                                android:layout_marginStart="2dp"
-                                android:layout_weight="1"
-                                android:background="@drawable/border"
-                                android:gravity="center"
-                                android:text="10:30AM" />
-
-                            <TextView
-                                android:id="@+id/textView29"
-                                android:layout_width="wrap_content"
-                                android:layout_height="50dp"
-                                android:layout_marginStart="2dp"
-                                android:layout_weight="1"
-                                android:background="@drawable/border"
-                                android:gravity="center"
-                                android:text="11:00AM" />
-
-                            <TextView
-                                android:id="@+id/textView30"
-                                android:layout_width="wrap_content"
-                                android:layout_height="50dp"
-                                android:layout_marginStart="2dp"
-                                android:layout_marginEnd="16dp"
-                                android:layout_weight="1"
-                                android:background="@drawable/border"
-                                android:gravity="center"
-                                android:text="11:30AM" />
-                        </LinearLayout>
-                    </LinearLayout>
+                    </androidx.recyclerview.widget.RecyclerView>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
