--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,15 +5,22 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/userProfileActivity"
             android:icon="@drawable/ic_baseline_person_24"
             android:title="@string/menu_profile" />
+
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_appointment"
+            android:icon="@drawable/ic_baseline_access_time_24"
+            android:title="Appointments" />
+
+
+        <item
+            android:id="@+id/nav_chat"
             android:icon="@drawable/ic_baseline_chat_24"
             android:title="@string/menu_chat" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_settings"
             android:icon="@drawable/ic_baseline_settings_24"
             android:title="@string/menu_settings" />
     </group>
