--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/doctorDateFragment">
+    app:startDestination="@id/doctorBookingFragment">
     <fragment
         android:id="@+id/doctorDateFragment"
         android:name="com.example.dryogeshbatra.fragments.doctorDetails.DoctorDateFragment"
@@ -18,4 +18,28 @@
             android:id="@+id/action_doctorBookingFragment_to_doctorDateFragment"
             app:destination="@id/doctorDateFragment" />
     </fragment>
+
+
+    <fragment
+        android:id="@+id/nav_chat"
+        android:name="com.example.dryogeshbatra.fragments.userChat.userChatFragment"
+        android:label="Chats"
+        tools:layout="@layout/fragment_user_chat" />
+    <fragment
+        android:id="@+id/nav_settings"
+        android:name="com.example.dryogeshbatra.fragments.userSettings.userSettingsFragment"
+        android:label="Settings"
+        tools:layout="@layout/fragment_user_settings" />
+    <fragment
+        android:id="@+id/nav_appointment"
+        android:name="com.example.dryogeshbatra.fragments.userAppointments.userAppointmentFragment"
+        android:label="Appointments"
+        tools:layout="@layout/fragment_user_appointment" />
+    <activity
+        android:id="@+id/userProfileActivity"
+        android:name="com.example.dryogeshbatra.UserProfileActivity"
+        android:label="activity_user_profile"
+        tools:layout="@layout/activity_user_profile" />
+
+
 </navigation>
