--- a/app/src/main/res/layout/fragment_confirm_details.xml
+++ b/app/src/main/res/layout/fragment_confirm_details.xml
@@ -37,7 +37,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/til_mobile_number">
 
                 <com.example.shopiz.utils.MSPEditText
-                    android:id="@+id/et_confirm_mobile_number"
+                    android:id="@+id/et_patient_confirm_mobile_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number"
@@ -62,7 +62,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <com.example.shopiz.utils.MSPEditText
-                    android:id="@+id/et_first_name"
+                    android:id="@+id/et_patient_first_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
@@ -86,7 +86,7 @@
                 app:layout_constraintTop_toBottomOf="@id/til_first_name">
 
                 <com.example.shopiz.utils.MSPEditText
-                    android:id="@+id/et_last_name"
+                    android:id="@+id/et_patient_last_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
@@ -110,7 +110,7 @@
                 app:layout_constraintTop_toBottomOf="@id/til_last_name">
 
                 <com.example.shopiz.utils.MSPEditText
-                    android:id="@+id/et_email"
+                    android:id="@+id/et_patient_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
@@ -134,7 +134,7 @@
                 app:layout_constraintTop_toBottomOf="@id/til_email">
 
                 <com.example.shopiz.utils.MSPEditText
-                    android:id="@+id/et_mobile_number"
+                    android:id="@+id/et_patient_mobile_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="numberPassword"
@@ -158,7 +158,7 @@
                 tools:ignore="NotSibling">
 
                 <com.myshoppal.utils.MSPRadioButton
-                    android:id="@+id/rb_male"
+                    android:id="@+id/rb_patient_male"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginEnd="@dimen/profile_radio_button_marginStartEnd"
@@ -172,7 +172,7 @@
                     android:textStyle="bold" />
 
                 <com.myshoppal.utils.MSPRadioButton
-                    android:id="@+id/rb_female"
+                    android:id="@+id/rb_patient_female"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginStart="@dimen/profile_radio_button_marginStartEnd"
@@ -186,7 +186,7 @@
             </RadioGroup>
 
             <com.example.shopiz.utils.MSPButton
-                android:id="@+id/btn_save"
+                android:id="@+id/btn_patient_save"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
