--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,11 @@
         android:id="@+id/doctorDateFragment"
         android:name="com.example.dryogeshbatra.fragments.doctorDetails.DoctorDateFragment"
         android:label="Select Appointment"
-        tools:layout="@layout/doctor_date_fragment" />
+        tools:layout="@layout/doctor_date_fragment" >
+        <argument
+            android:name="patientDetails"
+            app:argType="com.example.dryogeshbatra.models.UserBookingDetails" />
+    </fragment>
     <fragment
         android:id="@+id/doctorBookingFragment"
         android:name="com.example.dryogeshbatra.fragments.doctorBooking.DoctorBookingFragment"
