--- a/app/src/main/res/layout/appointment_time_list.xml
+++ b/app/src/main/res/layout/appointment_time_list.xml
@@ -2,11 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp">
 
     <TextView
-        android:id="@+id/textView23"
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_time"
+        android:layout_width="75dp"
         android:layout_height="50dp"
         android:layout_weight="1"
         android:background="@drawable/border"
