--- a/app/src/main/res/layout/doctor_date_fragment.xml
+++ b/app/src/main/res/layout/doctor_date_fragment.xml
@@ -302,6 +302,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_appointment_slots"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
@@ -313,7 +314,8 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView22">
+                        app:layout_constraintTop_toBottomOf="@+id/textView22"
+                        app:spanCount="4">
 
 
                     </androidx.recyclerview.widget.RecyclerView>
