--- a/app/src/main/res/layout/fragment_user_appointment.xml
+++ b/app/src/main/res/layout/fragment_user_appointment.xml
@@ -9,15 +9,17 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="visible"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/no_appointments"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="There are no appointments."
